<resources>
    <string name="app_name">Poke-Tracker App</string>
    <string name="attack">Attack</string>
    <string name="hp">HP</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="register_new_catch">Register new Catch!</string>
    <string name="national_number">National Number</string>
    <string name="level">Level</string>
    <string name="base_stats">Base stats</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="defense">Defense</string>
    <string name="male">Male</string>
    <string name="unk">Unknown</string>
    <string name="female">Female</string>
</resources>